Revision history for {{$dist->name}}

{{$NEXT}}

1.62      2015-01-07 14:47:05 -0500
  - escape < and > in AUTHOR / thanks section

1.61      2014-12-30 13:56:48 -0500
  - Make CPANFile part of the default [@Author::Plicease]
  - added copy_mb option
  - simplified prereqs

1.60      2014-12-19 16:40:12 -0500
  - option for skipping common spelling release test

1.59      2014-10-29 08:00:04 -0400
  - added [Author::Plicease::InstallerPerlVersion]

1.58      2014-10-14 07:35:02 -0400
  - release tests update

1.57      2014-10-08 08:32:09 -0400
  - upped the requirements on several Dist::Zilla::Plugin::* and Test::* modules
  - silenced an annoying warning generated by some dists during diagnostic
  - use Test::Fixme 0.14 and warn option

1.56      2014-09-20 07:29:30 -0400
  - update default .travis.yml to use verbose testing

1.55      2014-09-20 07:25:48 -0400
  - update default .travis.yml to use 5.20, and dzil instead of prove

1.54      2014-07-31 09:30:24 -0400
  - check .travis.yml for Perl 5.19 or 5.20 as appropriate

1.53      2014-07-06 09:25:17 -0400
  - require more recent Role::Tiny where used

1.52      2014-06-13 11:21:43 -0400
  - added [Author::Plicease::SpecialPrereqs]

1.51      2014-06-13 08:10:39 -0400
  - add prereq Test::More 0.94 to all dists
    I use subtest a lot

1.50      2014-06-10 07:53:11 -0400
  - added [Author::Plicease::Resources] and am
    using it for [@Author::Plicease] now.  This was
    needed to allow the repo for Alien-Libarchive be
    named Alien-Libarchive2
  - fixed .travis.yml template

1.49      2014-05-22 07:45:40 -0400
  - make this distribution properly dynamic
  - include [ACPS::RPM] in bundle, if it is there
  - turn off (by default) unused_vars.t for old dists

1.48      2014-04-30 13:23:38 -0400
  - don't include developer prereqs in diagnostic

1.47      2014-04-16 02:26:37 -0400
  - update .travis.yml template to reflect my current usage
  - fixed tempalte release.yml

1.46      2014-04-10 13:27:07 -0400